--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/css/styles.css">
-    <script src="/static/js/script.js" defer></script>
+    <link rel="stylesheet" href="static/css/styles.css">
+    <script src="static/js/script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Speed Typing</title>
 </head>
 <body>
 <div class="timer" id="timer"></div>
 <div class="button-container">
     <button class="start" id="start">Start</button>
-    <button class="pause" id="pause">⏸️</button>
+    <button class="reload" id="reload">새로고침</button>
 </div>
-
 <div class="container">
     <div class="quote-display" id="quoteDisplay"></div>
     <textarea id="quoteInput" class="quote-input" autofocus></textarea>
