--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -18,8 +18,8 @@
             <button type="submit" class="login-button">로그인</button>
         </div>
         <div class="oauth2-box">
-            <button type="button" class="login-google">Login with Google</button>
-            <button type="button" class="login-naver">Login with Naver</button>
+            <button type="button" class="login-google" onclick="location.href = '/oauth2/authorization/google'">Login with Google</button>
+            <button type="button" class="login-naver" onclick="location.href = '/oauth2/authorization/naver'">Login with Naver</button>
         </div>
     </form>
 </div>
