login error 시 페이지로 이동. oauth2 로 가입한 로그인으로  formLogin 은 안되고있음

--- a/src/main/resources/templates/account/login_error.html
+++ b/src/main/resources/templates/account/login_error.html
@@ -21,7 +21,7 @@
 
         </div>
         <div class="oauth2-box">
-            <button class="back-button">뒤로 돌아가기</button>
+            <button type="button" class="back-button" onclick="location.href ='/account/login'">뒤로 돌아가기</button>
         </div>
     </form>
 </div>
