oauth2 로 form 로그인 보류

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -13,9 +13,9 @@
 <div class="login-box">
     <form action="/account/login" method="post">
         <div class="login-info">
-            <input type="text" id="login-id" placeholder="id" name="username" required>
-            <input type="password" id="login-pw" placeholder="password" name="password" required>
-            <button type="submit" class="login-button">로그인</button>
+<!--            <input type="text" id="login-id" placeholder="id" name="username" required>-->
+<!--            <input type="password" id="login-pw" placeholder="password" name="password" required>-->
+<!--            <button type="submit" class="login-button">로그인</button>-->
         </div>
         <div class="oauth2-box">
             <button type="button" class="login-google" onclick="location.href = '/oauth2/authorization/google'">Login with Google</button>
