--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="static/css/styles.css">
-    <script src="static/js/script.js" defer></script>
+<!--    <script src="static/js/script.js" defer></script>-->
+    <script src="static/js/mainpage.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>Speed Typing</title>
 </head>
 <body>
