timer, cmp 완성. start버튼 삭제 및 새로고침 버튼 정상작동

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="timer" id="timer"></div>
 <div class="button-container">
-    <button class="start" id="start">Start</button>
+<!--    <button class="start" id="start">Start</button>-->
     <button class="reload" id="reload">새로고침</button>
 </div>
 <div class="container">
