user_id 받기 위해 로그인 관련 수정

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -16,6 +16,8 @@
 <!--            <input type="text" id="login-id" placeholder="id" name="username" required>-->
 <!--            <input type="password" id="login-pw" placeholder="password" name="password" required>-->
 <!--            <button type="submit" class="login-button">로그인</button>-->
+            <span>로그인 후 이용가능한 서비스입니다</span>
+            <span>아래 계정을 통해 로그인해주세요</span>
         </div>
         <div class="oauth2-box">
             <button type="button" class="login-google" onclick="location.href = '/oauth2/authorization/google'">Login with Google</button>
