--- a/src/main/resources/static/css/account/login.css
+++ b/src/main/resources/static/css/account/login.css
@@ -18,12 +18,14 @@ body {
 }
 
 .login-info {
-    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 52.5px;
+    background-color: rgb(241, 240, 154);
+    margin-bottom: 52.5px;
+    height: 100px;
+    border-radius: 0.3rem;
 }
 
 .login-button {
