--- a/src/main/resources/static/css/account/login.css
+++ b/src/main/resources/static/css/account/login.css
@@ -23,7 +23,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 52.5px;
+    background-color: rgb(241, 240, 154);
+    margin-bottom: 52.5px;
+    height: 100px;
+    border-radius: 0.3rem;
 }
 
 .login-button {
