--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/css/styles.css">
 <!--    <script src="static/js/script.js" defer></script>-->
     <script src="static/js/mainpage.js" defer></script>
+    <script src="static/js/account/principal.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>Speed Typing</title>
