--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,8 +13,9 @@
     <title>Speed Typing</title>
 </head>
 <body>
-<div class="user-info">
-    <span class="login-user">username</span>
+<div class="user-info" id="user-info">
+    <span class="user-name" id="user-name">김김김</span>
+    <span class="user-email" id="user-email">username</span>
     <a class="logout" id="logout" href="/account/logout">Logout</a>
 </div>
 <div class="timer" id="timer"></div>
