--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="static/css/styles.css">
 <!--    <script src="static/js/script.js" defer></script>-->
-    <script src="static/js/mainpage.js" defer></script>
-    <script src="static/js/account/principal.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>Speed Typing</title>
@@ -28,4 +26,7 @@
     <textarea id="quoteInput" class="quote-input" autofocus></textarea>
 </div>
 </body>
+<script src="static/js/mainpage.js"></script>
+<script src="static/js/account/principal.js"></script>
+<!--<script src="static/js/mainpage.js"></script>-->
 </html>
