--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="static/js/mypage/mypage.js"></script>
 </head>
 <body>
+    <button id="myResultBtn">
+        Results
+    </button>
 
 </body>
 </html>
