--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="static/js/mypage/mypage.js"></script>
+    <script src="/static/js/account/principal.js"></script>
+    <script src="/static/js/mypage/mypage.js"></script>
 </head>
 <body>
     <button id="myResultBtn">
