--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,142 +1,89 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0;
-  background-color: #1E0555;
-}
-
-body,
-.quote-input {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #F0F0F0;
 }
 
 .container {
-  background-color: #F0DB4F;
-  padding: 1rem;
-  border-radius: .5rem;
-  width: 700px;
-  max-width: 90%;
-  margin-top: 150px;
-  position: relative;
-}
-
-.user-info {
-  height: 50px;
-  width: 700px;
-  max-width: 90%;
-  position: absolute;
-  top: 2rem;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.user-name {
-  color: #F0DB4F;
-  font-weight: bold;
-  margin-right: 20px;
-  align-self: center;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.user-email {
-  color: white;
-  font-weight: bold;
-  margin-right: 20px;
-  align-self: center;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-.logout {
-  font-size: 15px;
-  color: white;
-  font-weight: bold;
-  background-color: #F0DB4F;
-  border: 2px solid #F0DB4F;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  align-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
 .timer {
-  position: absolute;
-  top: 8rem;
-  font-size: 3rem;
-  color: #F0DB4F;
-  font-weight: bold;
-}
+    position: absolute;
+    top: 8rem;
 
-.button-container {
-  position: absolute;
-  top: 14rem;
-  left: 50%;
-  transform: translateX(-50%);
-}
+    font-size: 3rem;
+    color: #2E4053;
+    font-weight: bold;
+  }
 
-.start {
-  font-size: 0.9rem;
-  color: #F0DB4F;
-  font-weight: bold;
-  background-color: transparent;
-  border: 2px solid #F0DB4F;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  cursor: pointer;
-}
+  .button-container {
+    position: absolute;
+    top: 14rem;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-.reload {
-  font-size: 0.8em;
-  color: #F0DB4F;
-  font-weight: bold;
-  background-color: transparent;
-  border: 2px solid #F0DB4F;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  cursor: pointer;
-}
+  .reload {
+    font-size: 1em;
+    color: red;
+    font-weight: bold;
+    background-color: transparent;
+    border: transparent;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+  }
 
-.result-info {
-  background-color: wheat;
-}
+  .reload:hover{
+    font-size: 1.2em;
+  }
+
+  .typing-container {
+    background-color: #2E4053;
+    color: #fff;
+    padding: 1rem;
+    border-radius: .5rem;
+    width: 700px;
+    max-width: 90%;
+    margin-top: 230px;
+    position: relative;
+  }
+
+  .quote-display {
+    margin-bottom: 1rem;
+    margin-left: calc(1rem + 2px);
+    margin-right: calc(1rem + 2px);
+  }
+
+  .quote-input {
+    background-color: transparent;
+    color: #fff;
+    border: 2px solid #A1922E;
+    outline: none;
+    width: 100%;
+    height: 8rem;
+    margin: auto;
+    resize: none;
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    border-radius: .5rem;
+  }
+
+  .quote-input:focus {
+    border-color: black;
+  }
 
 
-.quote-display {
-  margin-bottom: 1rem;
-  margin-left: calc(1rem + 2px);
-  margin-right: calc(1rem + 2px);
-}
 
-.quote-input {
-  background-color: transparent;
-  border: 2px solid #A1922E;
-  outline: none;
-  width: 100%;
-  height: 8rem;
-  margin: auto;
-  resize: none;
-  padding: .5rem 1rem;
-  font-size: 1rem;
-  border-radius: .5rem;
-}
-
-.quote-input:focus {
-  border-color: black;
-}
-
+/* 정타 오타 */
 .correct {
-  color: green;
-}
+    color: #27AE60;
+  }
 
-.incorrect {
-  color: red;
-  text-decoration: underline;
-}
+  .incorrect {
+    color: red;
+    text-decoration: underline;
+  }
