--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -5,28 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/static/css/account/login.css">
+    <link rel="stylesheet" href="/static/css/footer.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-<header>
-
-</header>
-<div class="login-box">
-    <form action="/account/login" method="post">
-        <div class="login-info">
-<!--            <input type="text" id="login-id" placeholder="id" name="username" required>-->
-<!--            <input type="password" id="login-pw" placeholder="password" name="password" required>-->
-<!--            <button type="submit" class="login-button">로그인</button>-->
-            <span>로그인 후 이용가능한 서비스입니다</span>
-            <span>아래 계정을 통해 로그인해주세요</span>
+<header class="header"></header>
+<div class="container">
+    <div class="container mt-4">
+        <div class="jumbotron">
+            <h1>Tying Hangle</h1>
+            <p>&nbsp;</p>
+            <p>Typing Hangle 과 함께</p>
+            <p>타자 연습을 통해 속도를 향상시켜보세요 ! </p>
         </div>
-        <div class="oauth2-box">
-            <button type="button" class="login-google" onclick="location.href = '/oauth2/authorization/google'">Login with Google</button>
-            <button type="button" class="login-naver" onclick="location.href = '/oauth2/authorization/naver'">Login with Naver</button>
-        </div>
-    </form>
+    </div>
+    <div class="login-box">
+        <form action="/account/login" method="post">
+            <div class="login-info">
+                <span>로그인 후 이용가능한 서비스입니다</span>
+                <span>아래 계정을 통해 로그인해주세요</span>
+            </div>
+            <div class="oauth2-box">
+                <button type="button" class="login-google" onclick="location.href = '/oauth2/authorization/google'">Login with Google</button>
+                <button type="button" class="login-naver" onclick="location.href = '/oauth2/authorization/naver'">Login with Naver</button>
+            </div>
+        </form>
+    </div>
 </div>
-<footer>
 
-</footer>
+<footer class="footer"></footer>
 </body>
+<script src="/static/js/account/principal.js"></script>
+<script src="/static/js/toggle.js"></script>
+<script src="/static/js/login.js"></script>
 </html>
