--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="static/css/styles.css">
-<!--    <script src="static/js/script.js" defer></script>-->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <title>Speed Typing</title>
+    <head>
+        <title>Typing Game</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="static/css/styles.css">
+        <link rel="stylesheet" href="static/css/footer.css">
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    </head>
 </head>
 <body>
-<div class="user-info" id="user-info">
-    <span class="user-name" id="user-name">김김김</span>
-    <span class="user-email" id="user-email">username</span>
-    <a class="logout" id="logout" href="/account/logout">Logout</a>
-</div>
-<div class="timer" id="timer"></div>
-<div class="button-container">
-<!--    <button class="start" id="start">Start</button>-->
-    <button class="reload" id="reload">새로고침</button>
-</div>
+<header class="header"></header>
+
 <div class="container">
-    <div class="quote-display" id="quoteDisplay"></div>
-    <textarea id="quoteInput" class="quote-input" autofocus></textarea>
+    <div class="timer" id="timer">TIME</div>
+    <div class="button-container">
+        <button class="reload" id="reload">Re</button>
+    </div>
+    <div class="typing-container">
+        <div class="quote-display" id="quoteDisplay"></div>
+        <textarea id="quoteInput" class="quote-input" autofocus></textarea>
+    </div>
 </div>
+
+<footer class="footer"></footer>
 </body>
 <script src="static/js/mainpage.js"></script>
 <script src="static/js/account/principal.js"></script>
-<!--<script src="static/js/mainpage.js"></script>-->
+<script src="static/js/toggle.js"></script>
+<script src="static/js/index.js"></script>
 </html>
