--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -27,8 +27,8 @@
     <div class="login-box">
         <form action="/account/login" method="post">
             <div class="login-info">
-                <span>로그인 후 이용가능한 서비스입니다</span>
-                <span>아래 계정을 통해 로그인해주세요</span>
+                <span>로그인 후 마이 페이지에서 </span>
+                <span>더 많은 서비스를 만나보실 수 있습니다😊</span>
             </div>
             <div class="oauth2-box">
                 <button type="button" class="login-google" onclick="location.href = '/oauth2/authorization/google'">Login with Google</button>
